--- a/public/admin/posts.html
+++ b/public/admin/posts.html
@@ -33,12 +33,8 @@
           </select>
           <button class="btn btn-default btn-sm">筛选</button>
         </form>
-        <ul class="pagination pagination-sm pull-right">
-          <li><a href="#">上一页</a></li>
-          <li><a href="#">1</a></li>
-          <li><a href="#">2</a></li>
-          <li><a href="#">3</a></li>
-          <li><a href="#">下一页</a></li>
+        <ul class="pagination pagination-sm pull-right" id="page">
+
         </ul>
       </div>
       <table class="table table-striped table-bordered table-hover">
@@ -99,6 +95,7 @@
   <script src="../assets/vendors/jquery/jquery.js"></script>
   <script src="../assets/vendors/bootstrap/js/bootstrap.js"></script>
   <script src="../assets/vendors/art-template/template-web.js"></script>
+  <!-- 文章列表数据模板 -->
   <script type="text/html" id="postsTpl">
     {{each records}}
     <tr>
@@ -113,6 +110,18 @@
       </td>
     </tr>
     {{/each}}
+  </script>
+  <!-- 分页模板 -->
+  <script type="text/html" id="pageTpl">
+    {{if page > 1}}
+    <li><a href="javascript:;" onclick="changePage({{page-1}})">上一页</a></li>
+    {{/if}}
+    {{each display}}
+    <li><a href="javascript:;" onclick="changePage()">{{$value}}</a></li>
+    {{/each}}
+    {{if page < pages}}
+    <li><a href="javascript:;" onclick="changePage({{page-0+1}})">下一页</a></li>
+    {{/if}}
   </script>
   <script src="../assets/js/posts.js"></script>
 </body>
